Recapitulation de Responsive

--- a/calendar.html
+++ b/calendar.html
@@ -8,12 +8,12 @@
 <body>
 <!--  /*************** Menu Project Name ****************/-->
 <div class="side_bar_menu">
-    <div class="logo_side_bar">
+    <a href="dashboard.html" class="logo_side_bar">
         <img class="picture_logo" src="assets/images/logo_project_name.png" alt="Logo">
         <div class="text_side">Project Name
             <div class="child_text">Category</div>
         </div>
-    </div>
+    </a>
     <div class="side_menu sidebar">
         <div class="contenue_menu">
             <div for="dashboard" class="items_menu ">
