Rectification responsive 1920px

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container_registration">
         <img class="image" src="./assets/images/logo.png" alt="Logo Registration">
         <div class="contenue_registration">
-            <img class="groupe" src="./assets/images/Group-200.png" alt="Image Group-200">
+            <div class="picture_groupe">
+                <img class="groupe" src="./assets/images/Group-200.png" alt="Image Group-200">
+            </div>
             <div class="account">
                 <div class="items_account">
                     <div class="titre_account">
