--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Registration</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="shortcut icon" href="assets/images/logo_project_name.png" type="image/x-icon">
 </head>
 <body>
 <!--    /************ ACCEUIL DASHBOARD *********/-->
